@@ -3,8 +3,9 @@ s3fuse (0.14) unstable; urgency=low
   * NEW: Multipart (resumable) uploads for Google Cloud Storage.
   * NEW: Support for FV/S.
   * NEW: Set file content type by examining extension.
+  * Allow verbosity to be specified explicitly on the command line.
 
- -- Tarick Bedeir <tarick@bedeir.com>  Sun, 24 Feb 2013 18:23:12 -0600
+ -- Tarick Bedeir <tarick@bedeir.com>  Sun, 24 Feb 2013 18:53:49 -0600
 
 s3fuse (0.13.1) unstable; urgency=low
 
